# Blink

./: .env.example  .gitattributes  .gitignore  Dockerfile  EXECUTOR_IMPLEMENTATION.md  EXECUTOR_UPGRADE.md  IMPLEMENTATION_CHECKLIST.md  INDEX_POSITIONS_UPGRADE.md  POSITIONS_PANEL_GUIDE.md  POSITIONS_QUICK_REFERENCE.md  POSITIONS_UPGRADE_SUMMARY.md  QUICK_START.md  README.md  README_REALTIME.md  REALTIME_TRADING_DASHBOARD.md  REALTIME_UI_INTEGRATION.md  SYSTEM_COMPLETE.md  TERMINAL_QUICK_FIX.md  VERIFICATION.md  docker-compose.yml  entrypoint.sh  mcp.json  nginx.conf  package-lock.json  package.json  render.yaml  research_executor.py  restart.py  start.sh  supervisord.conf  test1000.txt  test300.xml  test500.txt  the new deployment feature  yuutusbhj.txt
broker/: CMakeLists.txt  dockerfile  main.cpp
broker/include/adapter/: eadapter.h
broker/include/exchange/: exchange1.h  exchange2.h
broker/src/adapter/: eadapter.cpp
broker/src/exchange/: exchange1.cpp  exchange2.cpp  exchange3.cpp  test_exchange.cpp
database/: Dadapter.cpp  Dadapter.h  adapter  init.sql
datafeed/: CMakeLists.txt  dockerfile
datafeed/adapters/base/: exchange_adapter.h
engine/: CMakeLists.txt  dockerfile
engine/algos/: debug_fast_trade.py  mean_reversion_strategy.py  rsi_strategy.py  simple_scalper.cpp  simple_scalper.py  sma_crossover.py  sma_strategy.py  strategy_3.ipynb  strategy_5.cpp
engine/include/: algo.h  algoManager.h  engine.h  marketData.h  riskManager.h
engine/include/algo/: mean_reversion.h  python_algo.h  sma.h
engine/src/: .!9034!algoManager.cpp  algo.cpp  algoManager.cpp  engine.cpp  main.cpp  python_bindings.cpp  riskManager.cpp
engine/src/algo/: mean_reversion.cpp  sma.cpp
executor/: CMakeLists.txt  dockerfile  main.cpp  test400.txt  test500.txt
executor/include/adapter/: oadapter.h
executor/include/config/: config.h
executor/include/exchange/: base_exchange.h  binance_exchange.h
executor/src/adapter/: oadapter.cpp
executor/src/exchange/: binance_exchange.cpp  exchange1.cpp
supabase/: config.toml
user/: test45454545.txt
user/blink/: dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
user/blink/public/: Resolve Conflicts · Pull Request #14 · user-Param_Blink.html
user/blink/public/Resolve Conflicts · Pull Request #14 · user-Param_Blink_files/: 10973.d164fadad1e6de35.module.css  15432.8874c9b15aa47b47.module.css  15716.0e47438780711235.module.css  15917.02d1947a0156c7de.module.css  17279.4861bf0a853c19d7.module.css  18103.5dd93b9aa79cc589.module.css  2029.90eb83a6422be5b8.module.css  207553080  21363-1bfc1794e6f71e87.js  21789-9cd97dfd4fb269b3.js  25663.af4c007abb54a41f.module.css  26107.3e60071fd473008d.module.css  26497-917804dab50366a5.js  29534-46ab69992248a8d7.js  3624-db5771d166a8390b.js  37103.f2ffdf02a1aa4a2e.module.css  3763.0479c9ba4cb576af.module.css  41110-9bdc7f84e8bd0495.js  42829.dfceba0b010d2ea4.module.css  437-b61696b87744e40b.js  46177.8d87cf6cee0c1ade.module.css  46287-3a1f3269a02b8060.js  46502-5047fe309bf37d8e.js  49521-3b553cd29062db6a.js  52997.9f206a5d5a302fd9.module.css  59852-cfe1350d4189acbb.js  60339.e745f715a3fb89bb.module.css  6174.d7261f894d19b4b2.module.css  66231-67143789e9a4cfef.js  70476.9b88646d4db28688.module.css  70882.3bdf9fffcc1593c7.module.css  71410-874f65a04c129aeb.js  76283.2538b0858889e89a.module.css  81058-fc9ccbdd06141af8.js  81758.1405b700cfd8e75d.module.css  82097-b1ab4d7cbdda0f4a.js  88988-12e8989a9e7902be.js  89602-a5f6b5137a0e6e26.js  94255.a83eb72b8b70a892.module.css  95494-8bb753f368af36c7.js  (+19 more)
user/blink/src/: App.css  App.tsx  index.css
user/blink/src/components/: navbar.tsx  section2.tsx
user/blink/src/components/ai/: ai.tsx  systemPrompt.ts
user/blink/src/components/animation/: background.tsx  text.tsx
user/blink/src/components/editor/: editor-main.tsx  explorer.tsx  terminal.tsx  terminalhost.js  test100.txt  test91.txt
user/blink/src/components/trade/: trade-chart.tsx  trade-controlpannel.tsx  trade-navbar.tsx  trade-orderbook.tsx  trade-positions.tsx  trade-realtime.tsx  trade-symbols.tsx
user/blink/src/hooks/: useAccountInfo.ts  useOrderTracking.ts  useWebSocket.ts
user/blink/src/pages/: blink.tsx  docs.tsx  editor.tsx  home.tsx  profile.tsx  social.tsx  trade.tsx
user/blink/src/pages/simulate/: simulate-card.tsx  simulate.tsx  simulation-results.ts
user/blink/src/style/: star-background.js
user/blink/src/types/: editor.ts
